...
            name="email"
            render={({ field }) => (
              <FormItem>
                <FormLabel>{t("register.email")}</FormLabel>
                <FormControl>
                  <Input
                    data-testid="register-email-input"
                    type="email"
                    autoCapitalize="none"
                    autoComplete="email"
                    autoCorrect="off"
                    inputMode="email"
                    spellCheck={false}
...
                  {IN_ELECTRON
                    ? t("register.password")
                    : `${t("register.password")} (${t("register.password_optional")})`}
                </FormLabel>
                <FormControl>
                  <Input
                    data-testid="register-password-input"
                    type="password"
                    autoCapitalize="none"
                    autoComplete="new-password"
                    autoCorrect="off"
                    spellCheck={false}
                    {...field}
...
                  {IN_ELECTRON
                    ? t("register.confirm_password")
                    : `${t("register.confirm_password")} (${t("register.password_optional")})`}
                </FormLabel>
                <FormControl>
                  <Input
                    data-testid="register-confirm-password-input"
                    type="password"
                    autoCapitalize="none"
                    autoComplete="new-password"
                    autoCorrect="off"
                    spellCheck={false}
                    {...field}
...
